--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description"
+        content="De persoonlijke website van Elias Verhoeven, afgestudeerd in marketing aan de VUB, met stages in digitale strategie en nu op zoek naar een carrière in financiën.">
+    <title>Over Elias Verhoeven</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     
