--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <h1>Elias Verhoeven</h1>
+            <nav class="navigation">
+                <ul class="nav-list">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="ervaring.html">Ervaring</a></li>
+                    <li><a href="vaardigheden.html">Vaardigheden</a></li>
+                </ul>
+                <button class="hamburger" aria-label="Toggle menu">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+                </nav>
+
+        </div>
+        </header>
 </body>
 </html>
