--- a/index.html
+++ b/index.html
@@ -24,8 +24,18 @@
                     <span></span>
                 </button>
                 </nav>
-
         </div>
         </header>
+        <main class="home">
+            <section class="intro">
+                <h2>Welkom op mijn website!</h2>
+                <p>Mijn naam is Elias Verhoeven. Ik ben 25 jaar oud, afgestudeerd in Marketing aan de Vrije Universiteit
+                    Brussel, en heb uitgebreide ervaring opgedaan tijdens stages in digitale strategie. Nu ben ik op zoek naar
+                    een nieuwe uitdaging in de financiële sector.</p>
+            </section>
+            <section class="image-section">
+                <img src="images/elias.jpg" alt="Elias Verhoeven, marketeer met ambities in financiën">
+            </section>
+        </main>
 </body>
 </html>
