--- a/index.html
+++ b/index.html
@@ -37,5 +37,8 @@
                 <img src="images/elias.jpg" alt="Elias Verhoeven, marketeer met ambities in financiën">
             </section>
         </main>
+        <footer class="footer">
+            <p>&copy; 2024 Elias Verhoeven. Alle rechten voorbehouden.</p>
+        </footer>
 </body>
 </html>
