--- a/ervaring.html
+++ b/ervaring.html
@@ -24,6 +24,18 @@
                 </nav>
                 </div>
                 </header>
+        
+        <main class="ervaring">
+            <section>
+                <h2>Mijn Stages</h2>
+                <ul>
+                    <li><strong>Digitale Strategie</strong> bij AdAgency (6 maanden) - Geleerd over SEO, social media en
+                        contentmarketing.</li>
+                    <li><strong>Data-analyse</strong> bij EcomPlatform (6 maanden) - Focus op KPI's en rapportage.</li>
+                </ul>
+            </section>
+        </main>
+
     
 </body>
 </html>
