--- a/ervaring.html
+++ b/ervaring.html
@@ -35,7 +35,9 @@
                 </ul>
             </section>
         </main>
-
+<footer class="footer">
+    <p>&copy; 2024 Elias Verhoeven. Alle rechten voorbehouden.</p>
+</footer>
     
 </body>
 </html>
