--- a/vaardigheden.html
+++ b/vaardigheden.html
@@ -24,5 +24,16 @@
             </nav>
         </div>
     </header>
+    <main class="vaardigheden">
+        <section>
+            <h2>Mijn Vaardigheden</h2>
+            <ul>
+                <li>Google Analytics</li>
+                <li>Microsoft Excel (Geavanceerd)</li>
+                <li>SEO en Contentmarketing</li>
+                <li>Data-analyse en rapportage</li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
