--- a/vaardigheden.html
+++ b/vaardigheden.html
@@ -35,5 +35,8 @@
             </ul>
         </section>
     </main>
+    <footer class="footer">
+        <p>&copy; 2024 Elias Verhoeven. Alle rechten voorbehouden.</p>
+    </footer>
 </body>
 </html>
