--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="De persoonlijke website van Elias Verhoeven, afgestudeerd in marketing aan de VUB, met stages in digitale strategie en nu op zoek naar een carrière in financiën.">
+    <meta name="keywords" content="Elias Verhoeven, marketing, financiën, VUB, digitale strategie, data-analyse">
+    <meta name="author" content="Elias Verhoeven">
     <title>Over Elias Verhoeven</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container">
@@ -17,28 +21,47 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="ervaring.html">Ervaring</a></li>
                     <li><a href="vaardigheden.html">Vaardigheden</a></li>
+                   
                 </ul>
                 <button class="hamburger" aria-label="Toggle menu">
                     <span></span>
                     <span></span>
                     <span></span>
                 </button>
-                </nav>
+            </nav>
         </div>
-        </header>
-        <main class="home">
-            <section class="intro">
-                <h2>Welkom op mijn website!</h2>
-                <p>Mijn naam is Elias Verhoeven. Ik ben 25 jaar oud, afgestudeerd in Marketing aan de Vrije Universiteit
-                    Brussel, en heb uitgebreide ervaring opgedaan tijdens stages in digitale strategie. Nu ben ik op zoek naar
-                    een nieuwe uitdaging in de financiële sector.</p>
-            </section>
-            <section class="image-section">
-                <img src="images/elias.jpg" alt="Elias Verhoeven, marketeer met ambities in financiën">
-            </section>
-        </main>
-        <footer class="footer">
+    </header>
+
+    <main class="home">
+        <section class="intro">
+            <h2>Welkom op mijn website!</h2>
+            <p>Mijn naam is Elias Verhoeven. Ik ben 25 jaar oud, afgestudeerd in Marketing aan de Vrije Universiteit
+                Brussel, en heb uitgebreide ervaring opgedaan tijdens stages in digitale strategie. Nu ben ik op zoek
+                naar een nieuwe uitdaging in de financiële sector, waar ik mijn analytische vaardigheden en creatieve
+                inzicht kan inzetten.</p>
+            <p>Ik geloof in het combineren van data en menselijk inzicht om duurzame resultaten te behalen. Bekijk mijn
+                ervaring, vaardigheden en projecten om meer te weten te komen over wat ik kan bijdragen.</p>
+        </section>
+        <section class="highlights">
+            <h2>Wat maakt mij uniek?</h2>
+            <ul>
+                <li>Uitgebreide kennis van digitale marketingstrategieën en tools.</li>
+                <li>Ervaring met data-analyse en financiële modellering.</li>
+                <li>Creatief probleemoplossend vermogen en oog voor detail.</li>
+                <li>Passie voor persoonlijke en professionele groei.</li>
+            </ul>
+        </section>
+        <section class="image-section">
+            <img src="images/elias.jpg" alt="Elias Verhoeven, marketeer met ambities in financiën">
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
             <p>&copy; 2024 Elias Verhoeven. Alle rechten voorbehouden.</p>
-        </footer>
+            <p><a href="contact.html">Contacteer mij</a></p>
+        </div>
+    </footer>
 </body>
+
 </html>
