ervaring update voller

--- a/ervaring.html
+++ b/ervaring.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ervaring - Elias Verhoeven</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container">
@@ -21,23 +23,40 @@
                     <span></span>
                     <span></span>
                 </button>
-                </nav>
-                </div>
-                </header>
-        
-        <main class="ervaring">
-            <section>
-                <h2>Mijn Stages</h2>
-                <ul>
-                    <li><strong>Digitale Strategie</strong> bij AdAgency (6 maanden) - Geleerd over SEO, social media en
-                        contentmarketing.</li>
-                    <li><strong>Data-analyse</strong> bij EcomPlatform (6 maanden) - Focus op KPI's en rapportage.</li>
-                </ul>
-            </section>
-        </main>
-<footer class="footer">
-    <p>&copy; 2024 Elias Verhoeven. Alle rechten voorbehouden.</p>
-</footer>
-    
+            </nav>
+        </div>
+    </header>
+
+    <main class="ervaring">
+        <section>
+            <h2>Mijn Ervaring</h2>
+            <ul>
+                <li><strong>Student Medewerker</strong> bij Supermarkt (Januari 2019 - Juni 2022)
+                    <ul>
+                        <li>Verantwoordelijk voor het bieden van uitstekende klantenservice.</li>
+                        <li>Actief gezocht naar manieren om de winkelinrichting te verbeteren.</li>
+                        <li>Werken in een dynamische omgeving met de nadruk op teamwerk en flexibiliteit.</li>
+                    </ul>
+                </li>
+                <li><strong>Digitale Strategie Stagiair</strong> bij AdAgency (6 maanden)
+                    <ul>
+                        <li>Werken met SEO, social media en contentmarketing.</li>
+                        <li>Ondersteunen van het team bij het uitvoeren van digitale campagnes.</li>
+                    </ul>
+                </li>
+                <li><strong>Data-analyse Stagiair</strong> bij EcomPlatform (6 maanden)
+                    <ul>
+                        <li>Focussen op KPI's en rapportage voor verschillende bedrijfsafdelingen.</li>
+                        <li>Analyseren van klantgedrag en verkoopgegevens.</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <p>&copy; 2024 Elias Verhoeven. Alle rechten voorbehouden.</p>
+    </footer>
 </body>
+
 </html>
