--- a/vaardigheden.html
+++ b/vaardigheden.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vaardigheden - Elias Verhoeven</title>
     <link rel="stylesheet" href="styles/index.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container">
@@ -24,19 +26,34 @@
             </nav>
         </div>
     </header>
+
     <main class="vaardigheden">
         <section>
             <h2>Mijn Vaardigheden</h2>
             <ul>
-                <li>Google Analytics</li>
-                <li>Microsoft Excel (Geavanceerd)</li>
-                <li>SEO en Contentmarketing</li>
-                <li>Data-analyse en rapportage</li>
+                <li><strong>Sportief</strong> - Ervaring in het organiseren van sportieve evenementen en het bevorderen
+                    van een gezonde levensstijl.</li>
+                <li><strong>Klantgericht</strong> - Klantenservice, empathie en het vermogen om snel en effectief in te
+                    spelen op de behoeften van klanten.</li>
+                <li><strong>Motiverend</strong> - Bekwaam in het motiveren van zowel teams als individuen om
+                    gezamenlijke doelen te behalen.</li>
+                <li><strong>Initiatief</strong> - Proactief in het vinden van verbeterpunten en het voorstellen van
+                    ideeën die bijdragen aan efficiëntere processen.</li>
+                <li><strong>Google Analytics</strong> - Ervaring met het analyseren van websiteverkeer en het
+                    rapporteren van belangrijke statistieken.</li>
+                <li><strong>Microsoft Excel</strong> - Geavanceerde kennis van Excel voor data-analyse, rapportages en
+                    het maken van grafieken.</li>
+                <li><strong>SEO en Contentmarketing</strong> - Ervaring met zoekmachineoptimalisatie en het ontwikkelen
+                    van strategieën voor contentmarketing.</li>
+                <li><strong>Data-analyse en Rapportage</strong> - Vaardigheid in het analyseren van gegevens en het
+                    opstellen van rapportages die beslissingsprocessen ondersteunen.</li>
             </ul>
         </section>
     </main>
+
     <footer class="footer">
         <p>&copy; 2024 Elias Verhoeven. Alle rechten voorbehouden.</p>
     </footer>
 </body>
+
 </html>
