--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <p><a href="contact.html">Contacteer mij</a></p>
         </div>
     </footer>
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
