--- a/ervaring.html
+++ b/ervaring.html
@@ -57,6 +57,7 @@
     <footer class="footer">
         <p>&copy; 2024 Elias Verhoeven. Alle rechten voorbehouden.</p>
     </footer>
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
