--- a/vaardigheden.html
+++ b/vaardigheden.html
@@ -54,6 +54,7 @@
     <footer class="footer">
         <p>&copy; 2024 Elias Verhoeven. Alle rechten voorbehouden.</p>
     </footer>
+    <script src="scripts/index.js"></script>
 </body>
 
 </html>
